--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "author": "Mior Muhammad Zaki",
     "name": "javie-events",
     "description": "Client-side and Node.js Event Listener Helper",
-    "version": "1.0.1",
+    "version": "1.1.1",
+    "author": "Mior Muhammad Zaki",
     "private": false,
     "main": "events.js",
     "engines": {
@@ -12,6 +12,12 @@
         "underscore": "1.3.3"
     },
     "devDependencies": {
+        "gulp": "~3.5.1",
+        "gulp-coffee": "~1.4.1",
+        "gulp-notify": "~0.4.0",
+        "gulp-rename": "~0.2.2",
+        "gulp-uglify": "~0.2.0",
+        "gulp-util": "~2.2.14",
         "mocha": ">= 0.14.1"
     },
     "scripts": {
